src/test/deca/syntax/invalid/personal/duplicate_main.deca
// Description:
//    Faire 2 main ce qui n'est pas valide syntaxiquement
//
// Resultats:
//   erreur
// 
// Historique:
//    cree le 14/01/2025

{
  
}
{

}
